--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "type": "module",
+  "dependencies": {
+    "vitepress": "^2.0.0-alpha.12",
+    "vue": "^3.5.21"
+  },
   "devDependencies": {
-    "vitepress": "^2.0.0-alpha.12"
+    "@vitejs/plugin-vue": "^5.2.4",
+    "vite": "^5.4.20"
   }
 }
