--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "My developer guidelines",
   "main": "index.js",
   "scripts": {
+    "dev": "vitepress dev docs",
+    "build": "vitepress build docs",
+    "preview": "vitepress preview docs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
