--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,11 @@
     "strict": true,
     "jsx": "preserve",
     "esModuleInterop": true,
+    "skipLibCheck": true,
     "lib": ["ESNext", "DOM"],
-    "types": ["vite/client"]
+    "types": ["vite/client"],
+    "resolveJsonModule": true,
+    "isolatedModules": true
   },
   "include": ["docs/.vitepress/**/*", "docs/**/*.vue"]
 }
